--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 API_KEY=16372847384558485
 SECRET=123
+CLIENT_ID=519068140461-kko2b917ri3i3l81vq89gimtrrupcian.apps.googleusercontent.com
+CLIENT_SECRET=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
